Added concepts to list

--- a/index.html
+++ b/index.html
@@ -7,8 +7,42 @@
   </head>
   <body>
     <ul class="list-container">
+      <li id="variables">Variables</li>
+      <li id="opps">Data types</li>
+      <li id="comparisons">Comparisons</li>
+      <li id="conditional Operations">Conditional Operations</li>
+      <li id="logical Operations">Logical Operations</li>
+      <li id="for-loops">For loops</li>
+      <li id="while-loops">While Loops</li>
+      <li id="switch-statements">Switch Statements</li>
+      <li id="functions">Functions</li>
+      <li id="arrow-functions">Arrow Functions</li>
+      <li id="functional-expressions">Functional Expressions</li>
+      <li id="array-methods">Array Methods</li>
+      <li id="string-methods">String Methods</li>
+      <li id="scope">Scope</li>
+      <li id="classes">Classes (ES6)</li>
+      <br></br>
+      <li id="recursion">Recursion</li>
+      <li id="the-call-stack">The Call Stack</li>
+      <li id="nested-functions">Nested Functions</li>
+      <li id="global-objects">Global Objects</li>
+      <li id="this">'This'</li>
       <li id="closure">Closure</li>
-      <li id="opps">Operators</li>
+      <li id="Call">Call</li>
+      <li id="Apply">Apply</li>
+      <li id="Hoisting">Hoisting</li>
+      <li id="Currying">Currying</li>
+      <li id="Memoization">Memoization</li>
+      <li id="Polymorphism">Polymorphism</li>
+      <li id="asynchronous-javascript">Asynchronous Javascript</li>
+      <li id="promises">Promises</li>
+      <li id="async-await">Async and Await</li>
+      <li id="vallue-vs-reference">Value vs Reference</li>
+      <li id="prototypal-inheritance">Prototypal Inheritance
+    </li>
+      <li id="IIFEs">IIFEs</li>
+      <li id="the-module-pattern">The Module Pattern</li>
     </ul>
     <div id="display-container"></div>
     <script src="main.js"></script>
