--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
+    
     <title>Document</title>
   </head>
   <body>
+    <div class="flex-container">
     <ul class="list-container">
       <li id="variables">Variables</li>
       <li id="opps">Data types</li>
@@ -29,12 +32,12 @@
       <li id="global-objects">Global Objects</li>
       <li id="this">'This'</li>
       <li id="closure">Closure</li>
-      <li id="Call">Call</li>
-      <li id="Apply">Apply</li>
-      <li id="Hoisting">Hoisting</li>
-      <li id="Currying">Currying</li>
-      <li id="Memoization">Memoization</li>
-      <li id="Polymorphism">Polymorphism</li>
+      <li id="call">Call</li>
+      <li id="apply">Apply</li>
+      <li id="hoisting">Hoisting</li>
+      <li id="currying">Currying</li>
+      <li id="memoization">Memoization</li>
+      <li id="polymorphism">Polymorphism</li>
       <li id="asynchronous-javascript">Asynchronous Javascript</li>
       <li id="promises">Promises</li>
       <li id="async-await">Async and Await</li>
@@ -45,6 +48,7 @@
       <li id="the-module-pattern">The Module Pattern</li>
     </ul>
     <div id="display-container"></div>
+  </div>
     <script src="main.js"></script>
   </body>
 </html>
