--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css">
     
-    <title>Document</title>
+    <title>Javascript in 30 Words</title>
   </head>
   <body>
     <div class="flex-container">
