Added global font

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="flex-container">
     <ul class="list-container">
       <li id="variables">Variables</li>
-      <li id="opps">Data types</li>
+      <li id="data-types">Data types</li>
       <li id="comparisons">Comparisons</li>
       <li id="conditional Operations">Conditional Operations</li>
       <li id="logical Operations">Logical Operations</li>
