Changed flex to bottom

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="flex-container">
     <ul class="list-container">
+      <h2 class="subtitles">Fundamentals</h2>
       <li id="variables">Variables</li>
       <li id="data-types">Data types</li>
       <li id="comparisons">Comparisons</li>
@@ -26,6 +27,7 @@
       <li id="scope">Scope</li>
       <li id="classes">Classes (ES6)</li>
       <br></br>
+      <h2 class="subtitles"class="subtitles">Advanced</h2>
       <li id="recursion">Recursion</li>
       <li id="the-call-stack">The Call Stack</li>
       <li id="nested-functions">Nested Functions</li>
