Added github link for contributions

--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
       <li id="promises">Promises</li>
       <li id="async-await">Async and Await</li>
       <li id="vallue-vs-reference">Value vs Reference</li>
-      <li id="prototypal-inheritance">Prototypal Inheritance
-    </li>
+      <li id="prototypal-inheritance">Prototypal Inheritance</li>
       <li id="IIFEs">IIFEs</li>
       <li id="the-module-pattern">The Module Pattern</li>
     </ul>
-    <div id="display-container"></div>
+    <div id="display-container">A pre-interview refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a href="https://github.com/msmfa/javascript-in-30">Github</a></div>
   </div>
     <script src="main.js"></script>
   </body>
