--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       <h2 class="subtitles">Fundamentals</h2>
       <li id="variables">Variables</li>
       <li id="data-types">Data types</li>
+      <li id="operator">Operators</li>
       <li id="comparisons">Comparisons</li>
       <li id="conditional Operations">Conditional Operations</li>
       <li id="logical Operations">Logical Operations</li>
+      <li id="scope">Scope</li>
       <li id="for-loops">For loops</li>
       <li id="while-loops">While Loops</li>
       <li id="switch-statements">Switch Statements</li>
@@ -24,7 +26,6 @@
       <li id="functional-expressions">Functional Expressions</li>
       <li id="array-methods">Array Methods</li>
       <li id="string-methods">String Methods</li>
-      <li id="scope">Scope</li>
       <li id="classes">Classes (ES6)</li>
       <br></br>
       <h2 class="subtitles"class="subtitles">Advanced</h2>
