Added event loop

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <li id="closure">Closure</li>
       <li id="call">Call</li>
       <li id="apply">Apply</li>
+      <li id="event-loop">Event Loop</li>
       <li id="hoisting">Hoisting</li>
       <li id="currying">Currying</li>
       <li id="memoization">Memoization</li>
