Added requirements and comparison section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <li id="data-types">Data types</li>
       <li id="functions">Functions</li>
       <li id="functional-expressions">Functional Expressions</li>
-      <li id="operator">Operators</li>
+      <li id="operators">Operators</li>
       <li id="comparisons">Comparisons</li>
       <li id="conditional Operations">Conditional Operations</li>
       <li id="logical Operations">Logical Operations</li>
