Added comparisons and updated Req

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <li id="functional-expressions">Functional Expressions</li>
       <li id="operators">Operators</li>
       <li id="comparisons">Comparisons</li>
-      <li id="conditional Operations">Conditional Operations</li>
-      <li id="logical Operations">Logical Operations</li>
+      <li id="con-operations">Conditional Operations</li>
+      <li id="logical-opp">Logical Operations</li>
       <li id="for-loops">For loops</li>
       <li id="while-loops">While Loops</li>
       <li id="switch-statements">Switch Statements</li>
