--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <li id="IIFEs">IIFEs</li>
       <li id="the-module-pattern">The Module Pattern</li>
     </ul>
+    <div id="testdisplay"></div>
     <div id="display-container">A pre-interview refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></div>
   </div>
     <script src="main.js"></script>
