Organised folders into their own modules

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <div id="testdisplay"></div>
     <div id="display-container">A pre-interview refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></div>
   </div>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
