Updated homepage text

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       <li id="scope">Scope</li>
       <br></br>
       <h2 class="subtitles"class="subtitles">Advanced</h2>
-      <li id="recursion">Recursion</li>
       <li id="the-call-stack">The Call Stack</li>
+      <li id="recursion">Recursion</li>
       <li id="nested-functions">Nested Functions</li>
+      <li id="IIFEs">IIFEs</li>
       <li id="global-objects">Global Objects</li>
       <li id="this">'This'</li>
       <li id="closure">Closure</li>
@@ -44,13 +45,12 @@
       <li id="asynchronous-javascript">Asynchronous Javascript</li>
       <li id="promises">Promises</li>
       <li id="async-await">Async and Await</li>
-      <li id="vallue-vs-reference">Value vs Reference</li>
       <li id="prototypal-inheritance">Prototypal Inheritance</li>
-      <li id="IIFEs">IIFEs</li>
       <li id="the-module-pattern">The Module Pattern</li>
+      <li id="value-vs-reference">Value vs Reference</li>
     </ul>
     <div id="testdisplay"></div>
-    <div id="display-container">A pre-interview refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></div>
+    <div id="display-container">A refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></div>
   </div>
     <script type="module" src="main.js"></script>
   </body>
