--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       <br></br>
       <h2 class="subtitles"class="subtitles">Advanced</h2>
       <li id="the-call-stack">The Call Stack</li>
-      <li id="event-loop">Event Loop</li>
-      <li id="recursion">Recursion</li>
-      <li id="nested-functions">Nested Functions</li>
+      <li id="event-loop">The Event Loop</li>
       <li id="IIFEs">IIFEs</li>
+      <li id="nested-functions">Nested Functions</li>
+      <li id="recursion">Recursion</li>
+      <li id="memoization">Memoization</li>
       <li id="closure">Closure</li>
       <li id="hoisting">Hoisting</li>
       <li id="currying">Currying</li>
-      <li id="memoization">Memoization</li>
       <li id="polymorphism">Polymorphism</li>
       <li id="call">Call</li>
       <li id="apply">Apply</li>
@@ -49,7 +49,6 @@
       <li id="the-module-pattern">The Module Pattern</li>
       <li id="value-vs-reference">Value vs Reference</li>
     </ul>
-    <div id="testdisplay"></div>
     <div id="display-container">A refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></div>
   </div>
     <script type="module" src="main.js"></script>
