--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
       <li id="closure">Closure</li>
       <li id="hoisting">Hoisting</li>
       <li id="currying">Currying</li>
-      <li id="polymorphism">Polymorphism</li>
-      <li id="call">Call</li>
-      <li id="apply">Apply</li>
       <li id="asynchronous-javascript">Asynchronous Javascript</li>
       <li id="promises">Promises</li>
       <li id="async-await">Async and Await</li>
-      <li id="this">'This'</li>
+      <li id="call">Call</li>
+      <li id="apply">Apply</li>
+      <li id="apply">Bind</li>
       <li id="global-objects">Global Objects</li>
+      <li id="polymorphism">Polymorphism</li>
+      <li id="this">'This'</li>
       <li id="prototypal-inheritance">Prototypal Inheritance</li>
       <li id="the-module-pattern">The Module Pattern</li>
       <li id="value-vs-reference">Value vs Reference</li>
