styles: update panels, add semantic HTML

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
     
     <title>Javascript in 30 Words</title>
   </head>
+
   <body>
-    <div class="flex-container">
-    <ul class="list-container">
-      <h2 class="subtitles">Fundamentals</h2>
+    <main class="main">
+    <section class="section-left">
+    <ul>
+      <h2 class="section-left-subtitle">Fundamentals</h2>
       <li id="variables">Variables</li>
       <li id="functions">Functions</li>
       <li id="functional-expressions">Functional Expressions</li>
@@ -27,7 +29,7 @@
       <li id="classes">Classes (ES6)</li>
       <li id="scope">Scope</li>
       <br></br>
-      <h2 class="subtitles"class="subtitles">Advanced</h2>
+      <h2 class="section-left-subtitle">Advanced</h2>
       <li id="the-call-stack">The Call Stack</li>
       <li id="event-loop">The Event Loop</li>
       <li id="IIFEs">IIFEs</li>
@@ -49,8 +51,9 @@
       <li id="prototypal-inheritance">Prototypal Inheritance</li>
       <li id="polymorphism">Polymorphism</li>
     </ul>
-    <div id="display-container">A refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></div>
-  </div>
+  </section>
+    <section class="section-right">A refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></section>
+  </main>
     <script type="module" src="main.js"></script>
   </body>
 </html>
