feat: change colour of link if clicked

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       <li id="polymorphism">Polymorphism</li>
     </ul>
   </section>
-    <section class="section-right">A refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github</a></section>
+    <section class="section-right">A refresher on Javascript concepts in less than 30 words. This is an open source project. Contributions are welcome via <a target ="_blank" href="https://github.com/msmfa/javascript-in-30">Github.</a></section>
   </main>
     <script type="module" src="main.js"></script>
   </body>
